# c

./: .gitignore  CMakeLists.txt  mail_ru_cource.cpp  main.cpp  mem_alloc.cpp  mem_alloc_example.cpp  string_example.cpp  string_example.h  struct_example.cpp  struct_example.h
algorithms/sorting/: buble_sort.cpp  buble_sort.h  insertion_sort.h
lecture_2/: a.out
pthreads_examples/: assign_processor_for_thread.cpp  assign_processor_for_thread.h  create_threads.cpp  create_threads.h  join_threads.cpp  join_threads.h
submission_data/: list.cpp  list.h  test_list.cpp  test_list.h
work_with_files_examples/: read_data_from_file.cpp  read_data_from_file.h
